# nixos-config

./: .editorconfig  .gitignore  LICENSE  README.md  TODO.md  boot.nix  build-audio-profile.sh  build-profile.sh  clean-profile-gc-roots.raku  configuration-audio.nix  configuration-graphics.nix  configuration.nix  constants.nix  constants.toml  fix-cpupower-build-failure.nix  fonts.nix  gui.nix  home-manager-pick.nix  keys.secret.asc  my-packages.nix  network.nix  nix-utils-pick.nix  nixos-stable-pick.nix  nixos-unstable-pick.nix  opengl.nix  pkgs.nix  qt-apps-crashing-fix.nix  secret.nix.asc  tell-a-secret.raku  terminal-emulators.nix  user-specific.nix  vims.nix
apps/: ardour.nix  dino.nix  firefox.nix  gnome-screenshot.nix  gpaste-gui.nix  hell.nix  minidsp-rs.nix  neovide.nix  neovim-gtk.nix  nheko.nix  patchance.nix  place-cursor-at.nix  psi-plus.nix  pspg.nix  unclechu-i3-status.nix  wenzels-bash.nix  wenzels-i3.nix  wenzels-neovim.nix  wenzels-termite.nix  wenzels-xbindkeys.nix  xlib-keys-hack.nix
channels/: .editorconfig  manage.raku  nixos-pin.nix
custom-options/: my-boot-attributes.nix  unfree-predicates.nix  whitelisted-insecure-packages.nix
gui/: gtk-filepicker.nix  i3.nix  music-player-controls.toml  rofi-commands.nix  wm-config.toml
gui/i3/wenzels-i3-status-generator/: .editorconfig  .envrc.example  .gitignore  README.md  cabal.project  default.nix  hie.yaml  wenzels-i3-status-generator.cabal
gui/i3/wenzels-i3-status-generator/app/: Main.hs
gui/i3/wenzels-i3-status-generator/src/WenzelsI3StatusGenerator/: App.hs  Dzen.hs  IPC.hs  Indicators.hs  Layout.hs  ParentProc.hsc  Render.hs  Utils.hs  X.hs
gui/i3/wenzels-i3-status-generator/src/WenzelsI3StatusGenerator/EventSubscriber/: Battery.hs  DateTime.hs  IPC.hs  InputEvents.hs  WindowTitle.hs
gui/i3/wenzels-i3-status-generator/src/WenzelsI3StatusGenerator/Handler/: AppState.hs  InputEvents.hs
gui/i3/wenzels-i3-status-generator/src/WenzelsI3StatusGenerator/Handler/AppState/: Types.hs
gui/i3/wenzels-i3-status-generator/src/WenzelsI3StatusGenerator/Utils/: Aeson.hs
hardware/: rw-wenzel-nixos-laptop.nix  rw-wenzel-nixos-laptop.secret.nix.asc  wenzel-nixos-pc.nix  wenzel-nixos-pc.secret.nix.asc  wenzel-rusty-chunk.nix  wenzel-rusty-chunk.secret.nix.asc  wenzel-silver-laptop.nix  wenzel-silver-laptop.secret.nix.asc
nix/: sources.json
overlays/: amdgpu.nix  default.nix  (+8 more)
overlays-compat/: overlays.nix
(+215 files in other folders)
